Re-do scripting support (in the JSR-223) to support read-eval-print loop. Specifically, so that definitions in one command are preseved for future commands. See JFXC-2597 "JavafxScriptEngine doesn't remember definitions - prevents repl". In addition, separated out the core functionality is it doesn't depend on javax.script.